# md2pdf-pro

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MD2PDF Pro 代码审阅报告.md  MD2PDF_Pro_完整开发方案.md  Makefile  README.md  md2pdf_PROJECT_SPEC..md  md2pdf_pro_spec_analysis_report.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: CONFIG.md  IMPLEMENTATION_PLAN.md  QUALITY_STANDARDS.md  RISK_ASSESSMENT.md  TECHNICAL_DESIGN.md  iteration_1_design.md  iteration_2_design.md  iteration_3_design.md
src/md2pdf_pro/: __init__.py  cli.py  config.py  converter.py  errors.py  parallel.py  plugins.py  preprocessor.py  templates.py  watcher.py
src/md2pdf_pro/templates/: chinese_journal.latex  default.latex
tests/: conftest.py
tests/unit/: test_chinese_journal.py  test_cli.py  test_config.py  test_converter.py  test_parallel.py  test_pdf_optimization.py  test_plugins.py  test_preprocessor.py  test_templates.py  test_watcher.py
thoughts/: architecture-assessment.md
